configuracion de router, header y componentes etc

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+body { margin: 0;}
+html, body { height: 100%; }
+h1, h2, h3, h4, p, span, a{font-family: "Open Sans", sans-serif;}
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24
+}
+body *{
+    transition: all ease .2s;
+}
