--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,49 @@
-<p>home works!</p>
+<app-carousel-banner></app-carousel-banner>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+<p class="text-white">home works!</p>
+
