--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,14 +1,16 @@
-<header class="flex items-center justify-between xl:container mr-auto ml-auto mt-4">
-    <img class="w-[100px]" src="assets/logored2.png" alt="">
-    <ul class="md:flex items-center gap-8 text-base hidden">
-        <li><a routerLink="/" routerLinkActive="activebutton" ariaCurrentWhenActive="page" class="flex items-center text-[#b99833] hover:text-white cursor-pointer" >Inicio</a></li>
-        <li><a routerLink="/quienessomos" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Quienes somos <span class="material-symbols-outlined">expand_more</span></a></li>
-        <li><a routerLink="/servicios" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Servicios <span class="material-symbols-outlined">expand_more</span></a></li>
-        <li><a routerLink="/experiencia" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Experiencia</a></li>
-        <li><a routerLink="/prensa" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Prensa</a></li>
-        <li><a routerLink="/novedades" routerLinkActive="activebutton" ariaCurrentWhenActive="page" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Novedades</a></li>
-        <li><a routerLink="/contacto" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Contacto</a></li>
-        <li><a class="flex items-center text-[#b99833] hover:text-white cursor-pointer"><span class="material-symbols-outlined">search</span></a></li>
-    </ul>
-    <a class="md:hidden flex text-white text-base" href=""><span class="material-symbols-outlined">menu</span></a>
-</header>
+<div id="bgHeader" class="mr-auto ml-auto w-full fixed bg-gradient-to-b from-black">
+    <header id="header" class="flex items-center justify-between xl:container mr-auto ml-auto mt-4">
+        <img id="logoHeader" class="w-[100px]" src="assets/logored2.png" alt="">
+        <ul class="md:flex items-center gap-8 text-base hidden">
+            <li><a routerLink="/" routerLinkActive="activebutton" ariaCurrentWhenActive="page" class="flex items-center text-[#b99833] hover:text-white cursor-pointer" >Inicio</a></li>
+            <li><a routerLink="/quienessomos" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Quienes somos <span class="material-symbols-outlined">expand_more</span></a></li>
+            <li><a routerLink="/servicios" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Servicios <span class="material-symbols-outlined">expand_more</span></a></li>
+            <li><a routerLink="/experiencia" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Experiencia</a></li>
+            <li><a routerLink="/prensa" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Prensa</a></li>
+            <li><a routerLink="/novedades" routerLinkActive="activebutton" ariaCurrentWhenActive="page" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Novedades</a></li>
+            <li><a routerLink="/contacto" class="flex items-center text-[#b99833] hover:text-white cursor-pointer">Contacto</a></li>
+            <li><a class="flex items-center text-[#b99833] hover:text-white cursor-pointer"><span class="material-symbols-outlined">search</span></a></li>
+        </ul>
+        <a class="md:hidden flex text-white text-base" href=""><span class="material-symbols-outlined">menu</span></a>
+    </header>
+</div>
