--- a/src/app/components/carousel-banner/carousel-banner.component.html
+++ b/src/app/components/carousel-banner/carousel-banner.component.html
@@ -1,3 +1,5 @@
-<div class="carousel h-[700px]">
-    contenido banner
+<div class="carousel h-[700px] flex items-center justify-center">
+    <div class="loader-spin text-slate-700">
+        <span class="material-symbols-outlined text-4xl animate-spin">progress_activity</span>
+    </div>
 </div>
