--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<div id="bgHeader" class="mr-auto ml-auto w-full fixed bg-gradient-to-b from-black">
+<div id="bgHeader" class="mr-auto ml-auto w-full fixed bg-gradient-to-b from-black z-40">
     <header id="header" class="flex items-center justify-between xl:container mr-auto ml-auto mt-4">
         <img id="logoHeader" class="w-[100px]" src="assets/logored2.png" alt="">
         <ul class="md:flex items-center gap-8 text-base hidden">
