--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,20 @@
-<app-carousel-banner></app-carousel-banner>
+@defer (on viewport) {
+    <app-carousel-banner></app-carousel-banner>
+} @placeholder {
+    <div class="carousel h-[700px] flex items-center justify-center">
+        <div class="loader-spin text-slate-700">
+            <span class="material-symbols-outlined text-4xl animate-spin">progress_activity</span>
+        </div>
+    </div>
+
+} @loading {
+    <div class="carousel h-[700px] flex items-center justify-center">
+        <div class="loader-spin text-slate-700">
+            <span class="material-symbols-outlined text-4xl animate-spin">progress_activity</span>
+        </div>
+    </div>
+}
+
 <p class="text-white">home works!</p>
 <p class="text-white">home works!</p>
 <p class="text-white">home works!</p>
