--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -6,51 +6,13 @@
     <app-loader-spin></app-loader-spin>
 }
 
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-<p class="text-white">home works!</p>
-
+<section class="h-[300px] flex items-center bg-fixed bg-no-repeat bg-center bg-cover bg-[url('assets/fondoservicios.jpeg')]">
+    <div class="xl:container flex justify-end xl:mr-auto xl:ml-auto mr-4 ml-4">
+        <div class="w-[50%] flex items-center items-center justify-center flex-col rounded-md py-7 px-5 backdrop-blur-sm bg-black/50">
+            <h3 class="text-white text-3xl font-light text-center">¿Necesitas Promover tu proyecto en Internet?</h3>
+            <a href="" class="py-2.5 px-5 bg-[#a3862c66] text-white font-light rounded mt-5 hover:bg-[#a3862c] hover:shadow-xl">Planes para bandas</a>
+        </div>
+        
+    </div>
+</section>
+<section class="h-[500px] bg-grey"></section>
