--- a/src/app/pages/noticias/noticias.component.html
+++ b/src/app/pages/noticias/noticias.component.html
@@ -1,1 +1,5 @@
-<p class="text-white">noticias works!</p>
+<section class="xl:container xl:mr-auto xl:ml-auto mr-4 ml-4">
+    <div class="h-[300px]"></div>
+    <p class="text-white">noticias works!</p>
+</section>
+
